--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,20 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.active-link {
+  position: relative;
+  padding-bottom: 4px;
+}
+
+.active-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #009ea9;
+  border-radius: 2px;
+  box-shadow: 0 2px 0 #009ea9;
+}
